syntax = "proto3";

package user;

option go_package = "pb/user";

service UserService {
    rpc GetUserByID(GetUserByIDRequest) returns (UserResponse) {}
}

message GetUserByIDRequest {
    string user_id = 1;
}

message UserResponse {
    string user_id = 1;
    string name = 2;
    string email = 3;
}